--- a/MediaManager/MediaManager.csproj
+++ b/MediaManager/MediaManager.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.3" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.4" />
     <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.11" />
+    <PackageReference Include="RavenDB.Client" Version="4.0.3" />
   </ItemGroup>
 
   <ItemGroup>
